--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Update tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: yq '.image.tag = ${{ env.VERSION }}-20231228194204' lcfs/charts/lcfs-frontend/values-dev.yaml
+            cmd: yq -i '.image.tag = "${{ env.VERSION }}-20231228194204"' lcfs/charts/lcfs-frontend/values-dev.yaml
     
       - name: Check Changed value
         run: |
