--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,7 +30,9 @@ pyjwt = "^2.8.0"
 debugpy = "^1.8.0"
 cryptography = "^41.0.7"
 faker = "^21.0.0"
-
+pandas = "^2.1.4"
+openpyxl = "^3.1.2"
+xlwt = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
