--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -62,6 +62,8 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          ref: workflow-0.2.0
 
       - name: Log in to Openshift
         uses: redhat-actions/oc-login@v1.2
