--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,6 +95,7 @@
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "lint-staged": "^15.2.0",
+    "mochawesome": "^7.1.3",
     "prettier": "3.1.1",
     "prop-types": "^15.8.1",
     "sass": "^1.69.5",
