--- a/backend/Dockerfile.openshift
+++ b/backend/Dockerfile.openshift
@@ -32,6 +32,8 @@ COPY . /app/
 # by running the following command on your host machine from the root of this project:
 # chmod +x ./backend/wait-for-it.sh ./backend/lcfs/prestart.sh ./backend/lcfs/start.sh ./backend/lcfs/start-reload.sh
 
+# Update the group ownership and grant the read/write permission for /app
+RUN chgrp -R root /app && chmod -R g+rw /app
 # Make all startup scripts executable
 RUN chmod +x /app/wait-for-it.sh /app/lcfs/prestart.sh /app/lcfs/start.sh
 
