--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^31.0.1",
     "@ag-grid-community/core": "^31.0.1",
+    "@ag-grid-community/csv-export": "^31.0.1",
     "@ag-grid-community/react": "^31.0.1",
     "@ag-grid-community/styles": "^31.0.1",
     "@emotion/react": "^11.11.3",
