--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,8 +80,10 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@vitest/ui": "^1.1.0",
+    "axe-core": "^4.8.3",
     "cross-env": "^7.0.3",
     "cypress": "^13.6.2",
+    "cypress-axe": "^1.5.0",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
