--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
+    "cypress:install": "cypress install",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
@@ -100,7 +101,6 @@
     "mochawesome": "^7.1.3",
     "prettier": "3.1.1",
     "prop-types": "^15.8.1",
-    "sass": "^1.69.5",
     "standard": "^17.1.0",
     "storybook": "^7.6.6",
     "vitest": "^1.1.0"
