--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ pyjwt = "^2.8.0"
 debugpy = "^1.8.0"
 cryptography = "^41.0.7"
 faker = "^21.0.0"
+fastapi-cache2 = "^0.2.1"
 
 
 [tool.poetry.dev-dependencies]
