--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
+    "dayjs": "^1.11.10",
     "keycloak-js": "^23.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
