--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,11 +55,13 @@
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.10",
+    "i18next": "^23.8.2",
     "keycloak-js": "^23.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.0.1",
     "react-router-dom": "^6.21.1",
     "react-snowfall": "^1.2.1",
     "swagger-ui-react": "^5.10.5",
