--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,22 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "LCFS - pytests",
+      "type": "debugpy",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/backend",
+      "module": "poetry",
+      "python": "${workspaceFolder}/backend/venv/bin/python3",
+      "args": [
+        "run",
+        "pytest",
+        "-v",
+        "lcfs/tests/test_users.py::test_get_users_with_single_sortOrder"
+      ]
+    },
+    {
       "name": "LCFS Seeders",
-      "type": "python",
+      "type": "debugpy",
       "request": "launch",
       "cwd": "${workspaceFolder}/backend",
       "program": "${workspaceFolder}/backend/lcfs/db/seeders/seed_database.py",
@@ -17,7 +31,7 @@
     },
     {
       "name": "FastAPI - LCFS",
-      "type": "python",
+      "type": "debugpy",
       "request": "launch",
       "cwd": "${workspaceFolder}/backend",
       "module": "poetry",
@@ -35,7 +49,7 @@
     },
     {
       "name": "LCFS FastAPI: Remote Attach",
-      "type": "python",
+      "type": "debugpy",
       "request": "attach",
       "connect": {
         "host": "localhost",
