--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,8 @@ httpx = "^0.23.3"
 pandas = "^2.1.4"
 openpyxl = "^3.1.2"
 xlwt = "^1.3.0"
+xlrd = "^2.0.1"
+numpy = "^1.26.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
