--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,7 @@
     "react-router-dom": "^6.21.1",
     "react-snowfall": "^1.2.1",
     "swagger-ui-react": "^5.10.5",
-    "vite": "^5.1.1",
+    "vite": "^5.1.3",
     "vite-plugin-svgr": "^4.2.0",
     "yup": "^1.3.3",
     "zustand": "^4.4.7"
@@ -108,5 +108,8 @@
     "standard": "^17.1.0",
     "storybook": "^7.6.6",
     "vitest": "^1.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
