update nginx.conf and update checkout version

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,4 @@
+# Based on https://www.nginx.com/resources/wiki/start/topics/examples/full/#nginx-conf
 user              www www;  ## Default: nobody
 
 worker_processes  auto;
