--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 # Based on https://www.nginx.com/resources/wiki/start/topics/examples/full/#nginx-conf
-user              www www;  ## Default: nobody
+# user              www www;  ## Default: nobody
 
 worker_processes  auto;
 error_log         "/opt/bitnami/nginx/logs/error.log";
