--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -4,7 +4,7 @@ name: LCFS 0.2.0 Dev CI
 
 on:
   push:
-    branches: [ release-0.2.0 ]
+    branches: [release-0.2.0]
     paths:
       - frontend/**
       - backend/**
@@ -12,30 +12,27 @@ on:
 
 env:
   VERSION: 0.2.0
-  GIT_URL: https://github.com/bcgov/lcfs.git 
+  GIT_URL: https://github.com/bcgov/lcfs.git
   TOOLS_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-tools
   DEV_NAMESPACE: ${{ secrets.OPENSHIFT_NAMESPACE_PLATE }}-dev
 
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true  
+  cancel-in-progress: true
 
 jobs:
-
   set-pre-release:
     name: Calculate pre-release number
     runs-on: ubuntu-latest
-  
+
     outputs:
       output1: ${{ steps.set-pre-release.outputs.PRE_RELEASE }}
-    
+
     steps:
       - id: set-pre-release
         run: echo "PRE_RELEASE=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
 
   build:
-
     name: Build LCFS
     runs-on: ubuntu-latest
     needs: set-pre-release
@@ -45,7 +42,6 @@ jobs:
       PRE_RELEASE: ${{ needs.set-pre-release.outputs.output1 }}
 
     steps:
-
       - name: Check out repository
         uses: actions/checkout@v4.1.1
 
@@ -66,6 +62,8 @@ jobs:
           oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PRE_RELEASE }} ${{ env.DEV_NAMESPACE }}/lcfs-backend:${{ env.VERSION }}-${{ env.PRE_RELEASE }}
 
       - name: Build LCFS Frontend
+        env:
+          VITE_TEST: 'test env'
         run: |
           cd openshift/templates
           oc process -f ./frontend-bc.yaml VERSION=${{ env.VERSION }}-${{ env.PRE_RELEASE }} GIT_URL=${{ env.GIT_URL }} GIT_REF=release-${{ env.VERSION }} | oc apply --wait=true -f - -n ${{ env.TOOLS_NAMESPACE }}    
@@ -74,7 +72,6 @@ jobs:
           oc tag ${{ env.TOOLS_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PRE_RELEASE }} ${{ env.DEV_NAMESPACE }}/lcfs-frontend:${{ env.VERSION }}-${{ env.PRE_RELEASE }}
 
   deploy:
-
     name: Deploy LCFS
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -84,23 +81,22 @@ jobs:
       PRE_RELEASE: ${{ needs.set-pre-release.outputs.output1 }}
 
     steps:
-      
       - name: Checkout Manifest repository
         uses: actions/checkout@v4.1.1
         with:
           repository: bcgov-c/tenant-gitops-d2bd59
           ref: main
           ssh-key: ${{ secrets.MANIFEST_REPO_DEPLOY_KEY }}
-      
+
       - name: Update frontend tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-frontend/values-dev.yaml
+          cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-frontend/values-dev.yaml
 
       - name: Update backend tag
         uses: mikefarah/yq@v4.40.5
         with:
-            cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-backend/values-dev.yaml
+          cmd: yq -i '.image.tag = "${{ env.VERSION }}-${{ env.PRE_RELEASE }}"' lcfs/charts/lcfs-backend/values-dev.yaml
 
       - name: GitHub Commit & Push
         run: |
@@ -110,4 +106,3 @@ jobs:
           git add lcfs/charts/lcfs-backend/values-dev.yaml
           git commit -m "update the version with pre-release number"
           git push
-      
