--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -108,6 +108,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add lcfs/charts/lcfs-frontend/values-dev.yaml
           git add lcfs/charts/lcfs-backend/values-dev.yaml
-          git commit -m "update the version with pre-release number"
+          git commit -m "update the image tag to ${{ env.VERSION }}-${{ env.PRE_RELEASE }}"
           git push
       
