--- a/.github/workflows/test-prod-ci.yaml
+++ b/.github/workflows/test-prod-ci.yaml
@@ -112,7 +112,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add lcfs/charts/lcfs-frontend/values-test.yaml
           git add lcfs/charts/lcfs-backend/values-test.yaml
-          git commit -m "update the version with pre-release number for test"
+          git commit -m "update the image tag to ${{ env.VERSION }}-${{ env.PRE_RELEASE }}"
           git push
 
   deploy-on-prod:
@@ -163,6 +163,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add lcfs/charts/lcfs-frontend/values-prod.yaml
           git add lcfs/charts/lcfs-backend/values-prod.yaml
-          git commit -m "update the version with pre-release number for prod"
+          git commit -m "update the image tag to ${{ env.VERSION }}-${{ env.PRE_RELEASE }}"
           git push
               
