--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "dayjs": "^1.11.10",
     "i18next": "^23.8.2",
     "keycloak-js": "^23.0.3",
+    "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
