--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,6 +37,7 @@ openpyxl = "^3.1.2"
 xlwt = "^1.3.0"
 xlrd = "^2.0.1"
 numpy = "^1.26.4"
+lupa = "^2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
