--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,6 +38,7 @@ xlwt = "^1.3.0"
 xlrd = "^2.0.1"
 numpy = "^1.26.4"
 lupa = "^2.0"
+alembic-postgresql-enum = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
