--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.3",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
@@ -92,7 +94,7 @@
     "@vitest/ui": "^1.1.0",
     "axe-core": "^4.8.3",
     "cross-env": "^7.0.3",
-    "cypress": "^13.6.2",
+    "cypress": "^13.7.2",
     "cypress-axe": "^1.5.0",
     "cypress-vite": "^1.5.0",
     "eslint": "^8.56.0",
