--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,7 @@
     "preview": "vite preview",
     "storybook": "cross-env NODE_ENV=development storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest --ui",
     "cypress:install": "cypress install",
     "cypress:verify": "cypress verify",
     "cypress:open": "cypress open",
@@ -82,12 +79,13 @@
     "@storybook/react": "^7.6.6",
     "@storybook/react-vite": "^7.6.6",
     "@storybook/test": "^7.6.6",
-    "@testing-library/jest-dom": "^6.1.6",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@vitest/coverage-v8": "^1.4.0",
-    "@vitest/ui": "^1.1.0",
+    "@vitest/ui": "^1.4.0",
     "axe-core": "^4.8.3",
     "cross-env": "^7.0.3",
     "cypress": "^13.6.2",
@@ -103,14 +101,15 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
-    "jsdom": "^23.0.1",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.0",
     "mochawesome": "^7.1.3",
+    "msw": "^2.2.13",
     "prettier": "3.1.1",
     "prop-types": "^15.8.1",
     "standard": "^17.1.0",
     "storybook": "^7.6.6",
-    "vitest": "^1.1.0"
+    "vitest": "^1.4.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.6.1"
