Fix: failing test cases due to change in url, and data-testid.

--- a/frontend/.cypress-cucumber-preprocessorrc.json
+++ b/frontend/.cypress-cucumber-preprocessorrc.json
@@ -1,6 +1,6 @@
 {
   "e2e": {
-    "stepDefinitions": "cypress/e2e/Pages/**/*.cy.js"
+    "stepDefinitions": "cypress/e2e/Pages/**/*.test.js"
   },
   "component": {
     "stepDefinitions": "cypress/[filepath].cy.js"
