--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@mui/x-date-pickers": "^7.2.0",
     "@react-keycloak/web": "^3.4.0",
     "@storybook/addon-a11y": "^7.6.6",
     "@storybook/addon-docs": "^7.6.6",
@@ -49,12 +50,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "ag-grid-community": "^31.0.1",
     "ag-grid-react": "^31.0.1",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
     "chroma-js": "^2.4.2",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.8.2",
     "keycloak-js": "^23.0.3",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
     "quill": "^1.3.7",
     "react": "^18.2.0",
@@ -66,6 +70,7 @@
     "react-router-dom": "^6.21.1",
     "react-snowfall": "^1.2.1",
     "swagger-ui-react": "^5.10.5",
+    "uuid": "^9.0.1",
     "vite": "^5.1.3",
     "vite-plugin-svgr": "^4.2.0",
     "yup": "^1.3.3",
