updates to backend tables.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,13 +34,9 @@
       "type": "debugpy",
       "request": "launch",
       "cwd": "${workspaceFolder}/backend",
-      "module": "poetry",
+      "module": "uvicorn",
       "python": "${workspaceFolder}/backend/venv/bin/python3",
       "args": [
-        "run",
-        "python3",
-        "-m",
-        "uvicorn",
         "lcfs.web.application:get_app",
         "--port",
         "8000",
