--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.104.1"
+fastapi = "^0.111.0"
 uvicorn = { version = "^0.24.0", extras = ["standard"] }
 pydantic = {extras = ["email"], version = "^2.4.2"}
 yarl = "^1.8.2"
@@ -39,6 +39,7 @@ xlrd = "^2.0.1"
 numpy = "^1.26.4"
 lupa = "^2.0"
 alembic-postgresql-enum = "^1.1.2"
+bump-pydantic = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
